# studies

./: a-tutorial.hs  monad-transformers.cabal  stack.yaml
lazy-stream/: CREDITS.md  lazy-stream.cabal
lazy-stream/src/: FailsAndHacks.hs  Lib.hs
listT/: imports.hs  listT.cabal  stack.yaml
monad-transformers/: CREDITS.md  monad-transformers.cabal
monad-transformers/bowen/: CREDITS.md
monad-transformers/bowen/src/: One.hs  Two.hs
monad-transformers/eitherT/: eitherT.cabal  stack.yaml
monad-transformers/eitherT/src/: Lib.hs
monad-transformers/rwh/: CREDITS.hs  rwh.cabal  stack.yaml
monad-transformers/rwh/src/: LocalReader.hs  MTComposition.hs  MaybeT.hs  UglyStack.hs
monad-transformers/src/: Two.hs
monad-transformers/synthesis/: synthesis.cabal
monad-transformers/synthesis/src/: Equivalent.hs  InnerEither.hs  Lib.hs  Lift.hs  Order.hs  Stale.hs  UseGet.hs
pipes-and-listT/: README.md  listT.cabal
pipes-and-listT/src/: FromList_T.hs  FromPipes.hs
src/: Lib.hs
