name:                listT
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FromPipes
                     , FromList_T
  build-depends:       base >= 4.7 && < 5

                     -- gabriel gonzales's
                     , pipes

                     -- nikita volkov's
                     , list-t

                     -- has a buggy ListT, but useful tings like "lift"
                     , transformers

  default-language:    Haskell2010
