name:                synthesis
version:             0.1.0.0
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Equivalent
                     , Order
                     , UseGet
                     , Stale
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , either
  default-language:    Haskell2010
